tools/vendor/zerocopy/tests/ui-stable/diagnostic-not-implemented-from-zeros.stderr
error[E0277]: the trait bound `NotZerocopy: FromZeros` is not satisfied
  --> tests/ui-stable/diagnostic-not-implemented-from-zeros.rs:16:24
   |
16 |     takes_from_zeros::<NotZerocopy>();
   |                        ^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `FromZeros` is not implemented for `NotZerocopy`
  --> tests/ui-stable/../include.rs
   |
   |     pub struct NotZerocopy<T = ()>(pub T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: Consider adding `#[derive(FromZeros)]` to `NotZerocopy`
   = help: the following other types implement trait `FromZeros`:
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
             (A, B, C, D, E, F, G, H)
           and $N others
note: required by a bound in `takes_from_zeros`
  --> tests/ui-stable/diagnostic-not-implemented-from-zeros.rs:19:24
   |
19 | fn takes_from_zeros<T: FromZeros>() {}
   |                        ^^^^^^^^^ required by this bound in `takes_from_zeros`
